--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "body-parser": "^1.19.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.7.3",
+    "pg-promise": "^10.11.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
