--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.19.1",
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-fileupload": "^1.3.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pg": "^8.7.3",
